Fixing z-index

--- a/src/style.less
+++ b/src/style.less
@@ -99,6 +99,7 @@ body {
     top:-2000px;
     opacity: 0;
     position:absolute;
+    z-index: 1000;
     &.visible {
       top:0px;
       opacity:1;
